# Expense-Splitter

./: .gitignore  README.MD  main.py  main.qml  main_old.qml  pyproject.toml  requirements.txt  resources.qrc  resources_rc.py
components/: CurrencyComboBox.qml  ExpenseCard.qml  MemberCard.qml  ParticipantCard.qml  SearchBar.qml  SettlementCard.qml  SummaryCard.qml  TripCard.qml
dialogs/: AddExpenseDialog.qml  AddMemberDialog.qml  AddParticipantDialog.qml  AddTripDialog.qml  DeleteExpenseDialog.qml  DeleteMemberDialog.qml  DeleteParticipantDialog.qml  DeleteTripDialog.qml  EditExpenseDialog.qml  EditTripDialog.qml  SettlementDialog.qml
pages/: HomePage.qml  TripPage.qml
popups/: MemberMultiSelectPopup.qml  ParticipantMultiSelectPopup.qml  ToastPopup.qml
src/: file_actions.py  models.py  settings_manager.py  trip_manager.py
src/services/: settlement_service.py  share_service.py
src/utils/: settlements.py  share.py
