[project]
name = "PySide QtQuick Project"

[tool.pyside6-project]
files = ["components/CurrencyComboBox.qml", "components/ExpenseCard.qml", "components/SearchField.qml", "components/SummaryCard.qml", "components/TripCard.qml", "dialogs/AddExpenseDialog.qml", "dialogs/AddTripDialog.qml", "dialogs/DeleteTripDialog.qml", "dialogs/EditTripDialog.qml", "dialogs/SettlementDialog.qml", "main.py", "main.qml", "main_old.qml", "pages/HomePage.qml", "pages/TripPage.qml", "resources.qrc", "src/settings_manager.py", "src/trip_manager.py", "src/utils.py"]
