[project]
name = "Expense Splitter"

[tool.pyside6-project]
files = ["components/CurrencyComboBox.qml", "components/ExpenseCard.qml", "components/MemberCard.qml", "components/SearchBar.qml", "components/SettlementCard.qml", "components/TripCard.qml", "dialogs/AddExpenseDialog.qml", "dialogs/AddMemberDialog.qml", "dialogs/AddTripDialog.qml", "dialogs/DeleteExpenseDialog.qml", "dialogs/DeleteMemberDialog.qml", "dialogs/DeleteTripDialog.qml", "dialogs/EditExpenseDialog.qml", "dialogs/EditTripDialog.qml", "main.py", "main.qml", "pages/HomePage.qml", "pages/TripPage.qml", "pages/TripPage/ExpensesTab.qml", "pages/TripPage/MembersTab.qml", "pages/TripPage/SettlementsTab.qml", "popups/MemberMultiSelectPopup.qml", "popups/ToastPopup.qml", "resources.qrc", "src/data/trip_repository.py", "src/models.py", "src/settings_manager.py", "src/trip_manager.py", "src/utils/settlements.py", "src/utils/share.py"]
