[project]
name = "Expense Splitter"

[tool.pyside6-project]
files = ["components/CurrencyComboBox.qml", "components/ExpenseCard.qml", "components/ParticipantCard.qml", "components/SearchBar.qml", "components/SettlementCard.qml", "components/TripCard.qml", "dialogs/AddExpenseDialog.qml", "dialogs/AddParticipantDialog.qml", "dialogs/AddTripDialog.qml", "dialogs/DeleteExpenseDialog.qml", "dialogs/DeleteParticipantDialog.qml", "dialogs/DeleteTripDialog.qml", "dialogs/EditExpenseDialog.qml", "dialogs/EditTripDialog.qml", "main.py", "main.qml", "pages/HomePage.qml", "pages/TripPage.qml", "pages/TripPage/ExpensesTab.qml", "pages/TripPage/MembersTab.qml", "pages/TripPage/SettlementsTab.qml", "popups/ParticipantMultiSelectPopup.qml", "popups/ToastPopup.qml", "resources.qrc", "src/data/trip_repository.py", "src/file_actions.py", "src/models.py", "src/settings_manager.py", "src/trip_manager.py", "src/services/settlement_service.py", "src/services/share_service.py"]
